# UDEMY_OpenGL_Course

./: .gitignore  CMakeLists.txt  README.md  main.cpp
source/: main.cpp
source/Private/: Camera.cpp  Mesh.cpp  Shader.cpp  Window.cpp
source/Public/: Camera.h  Mesh.h  Shader.h  Window.h
source/Shaders/: shader.vert
